--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,6 +23,8 @@ jobs:
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
+    - name: Show event trigger
+       run: echo "Triggered by ${{ github.event_name }}"
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
